[package]
name = "pi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
dialoguer = "0.8"
# colored = "2.0.0"
# failure = "0.1.8"
exitfailure = "0.5.1"
config = "0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
